# KV-cache-paper

./: .gitignore  LICENSE  README.md  instructions.md  pyproject.toml
experiments/: baseline_full.yaml  hybrid_12x.yaml  hybrid_6x.yaml  hybrid_8x.yaml  qwen_12x.yaml  qwen_8x.yaml  qwen_8x_aggressive.yaml
paper/: Makefile  README.md  mlsys_kv_compression.tex  references.bib
reports/: PUBLICATION_READY_RESULTS.md  baseline_full_artifact.json  benchmark_tables.md  compression_comparison_summary.md  evaluation_summary.md  hybrid_12x_artifact.json  hybrid_12x_retuned.json  hybrid_12x_tuned.json  hybrid_6x.json  hybrid_6x_tuned.json  hybrid_8x_artifact.json  hybrid_8x_retuned.json  hybrid_8x_tuned.json  hyperparam_sweep.json  latest_eval.json  quality_baseline.json  quality_hybrid_12x.json  quality_hybrid_12x_retuned.json  quality_hybrid_6x.json  quality_hybrid_6x_tuned.json  quality_hybrid_8x.json  quality_hybrid_8x_retuned.json  quality_hybrid_8x_tuned.json  quality_simulation.json  qwen_12x_results.json  qwen_8x_aggressive_results.json  qwen_8x_results.json  repro_commands.sh  system_specs.txt
reports/benchmarks/: baseline.json  hybrid_12x.json  hybrid_6x.json  hybrid_8x.json
reports/simulated/: baseline_full.json  hybrid_12x.json  hybrid_8x.json
scripts/: evaluate_configs.py  generate_benchmark_tables.py  hyperparam_sweep.py  run_benchmark_stub.py  run_experiment.py  run_quality_benchmarks.py  simulate_quality_impact.py
src/adaptive_kv/: __init__.py  cache.py  config.py  metrics.py  (+4 more)
tests/: test_cache.py  test_quality.py  test_quantization.py  test_selection.py
